Create a system of unlock for expeditions